# package-installer-cli

./: .dockerignore  .gitignore  .npmignore  BUNDLE-INFO.md  CLI_SUGGESTIONS.md  CONTRIBUTING.md  Dockerfile  Dockerfile.dev  LICENSE  README.md  blog-package-installer-cli.mdx  docker-build.sh  docker-compose.yml  docker.sh  features.json  package-installer-cli-1.2.0.tgz  package.json  pnpm-lock.yaml  template.json  tsconfig.json  webpack.config.mjs
.github/workflows/: codeql.yml  docker.yml
core-cli/: .gitignore  .npmignore  README.md  package.json  pnpm-lock.yaml  tsconfig.json
core-cli/docs/: commands.md  installation.md
core-cli/scripts/: docker-build.sh
core-cli/src/: index.ts
core-cli/templates/: template.json
core-cli/templates/c++_c/cppcms/template/: CMakeLists.txt  README.md  config.json
core-cli/templates/c++_c/cppcms/template/src/: main.cpp  my_app.cpp  my_app.h
core-cli/templates/c++_c/restbed/template/: CMakeLists.txt  README.md
core-cli/templates/c++_c/restbed/template/config/: server.json
core-cli/templates/c++_c/restbed/template/src/: main.cpp  routes.cpp  routes.h
core-cli/templates/desktop/qt/template/: CMakeLists.txt  MainWindow.cpp  main.cpp
docs/: bundle-info.md  commands.md  deploy.md  docker.md  features.md  installation.md  templates.md
docs/assets/: cli-demo.sh
features/: features.json
features/auth/: auth.json
go-wrapper/: .gitignore  README.md  RELEASE_NOTES.md  build.sh  go.mod
homebrew-tap/: README.md
main-typescript/: CONTRIBUTING.md
python-wrapper/: .gitignore  pyproject.toml
ruby-wrapper/: .gitignore
rust-wrapper/: Cargo.toml  README.md
rust-wrapper/src/: main.rs
scripts/: bundle.js  create-distribution-bundle.sh  create-node-binary.sh  update-features.cjs
src/: index.ts  projectCreator.ts  prompts.ts  templateResolver.ts  types.ts  ui.ts  utils.ts
src/commands/: add.ts  (+16 more)
templates/: template.json
typescript-main/: Dockerfile  LICENSE  docker-compose.yml  package.json  pnpm-lock.yaml  webpack.config.mjs
(+646 files in other folders)
